examples/tao/errors/type_errors/undefined_var.tao
// Undefined variable: using a variable that was never bound
// Expected error: Type error - unbound variable

let x = y
x
